// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography.H1 should render default markup when no props are passed 1`] = `
<h1
  className="h1 h1--semiBold h1--onyx-base eeoxJq"
>
  Hello world
</h1>
`;

exports[`Typography.H1 should render with a custom color prop that lacks variants 1`] = `
<h1
  className="h1 h1--semiBold h1--brand-base cVbvAq"
  color="brand"
>
  Hello world
</h1>
`;

exports[`Typography.H1 should render with a custom weight prop 1`] = `
<h1
  className="h1 h1--semiBold h1--onyx-base ivITTG"
>
  Hello world
</h1>
`;

exports[`Typography.H1 should render with a textTransform prop 1`] = `
<h1
  className="h1 h1--semiBold h1--onyx-base eLJGiR"
>
  Hello world
</h1>
`;

exports[`Typography.H1 should render with custom color and variant props 1`] = `
<h1
  className="h1 h1--semiBold h1--accent01-dark eJrCyW"
  color="accent01"
>
  Hello world
</h1>
`;

exports[`Typography.H1 should render without a theme 1`] = `
<h1
  className="h1 h1--semiBold h1--onyx-base eeoxJq"
/>
`;

exports[`Typography.H1 should render without children 1`] = `
<h1
  className="h1 h1--semiBold h1--onyx-base eeoxJq"
/>
`;
